--- a/sample/Sample.Web/Views/Home/About.cshtml
+++ b/sample/Sample.Web/Views/Home/About.cshtml
@@ -1,7 +1,11 @@
 ﻿@{
     ViewData["Title"] = "About";
 }
+@model List<Application.Users.Dto.UserDto>
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
 <p>Use this area to provide additional information.</p>
+@foreach (var item in Model){
+    <li>Name=>@item.UserName,Address=>@item.UserAddress</li>
+}
